Fixed dark mode issues

--- a/apps/shade/styles.css
+++ b/apps/shade/styles.css
@@ -102,13 +102,13 @@
         --chart-4: 201 82% 90%;
         --chart-5: 201 87% 94%;
         --chart-gray: 210 13% 55%;
-        --sidebar-background: 216 11% 9%;
+        --sidebar-background: 216 11% 6%;
         --sidebar-foreground: 200 12% 96%;
         --sidebar-primary: 210 11% 25%;
         --sidebar-primary-foreground: 0 0% 100%;
         --sidebar-accent: 210 11% 25%;
         --sidebar-accent-foreground: 200 12% 96%;
-        --sidebar-border: 210 11% 25%;
+        --sidebar-border: 210 11% 15%;
         --sidebar-ring: 210 13% 55%;
     }
 
